...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65" />

    <Button
        android:id="@+id/instructionsButtonSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions_button"

        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
...
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline2" />

    <Button
        android:id="@+id/generateButtonSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline3"
        app:layout_constraintLeft_toLeftOf="@id/right_guideline2"
        app:layout_constraintRight_toRightOf="@id/right_guideline3"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline" />

    <Button
        android:id="@+id/startButtonSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline4"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline2"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline3" />

    <Button
        android:id="@+id/stopButtonSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline4"
        app:layout_constraintLeft_toLeftOf="@id/right_guideline2"
        app:layout_constraintRight_toRightOf="@id/right_guideline3"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline3" />

    <Button
        android:id="@+id/rewindButtonSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewind_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline4"
        app:layout_constraintLeft_toLeftOf="@id/right_guideline3"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline3" />

    <ScrollView
        android:id="@+id/scrollProofSelection"
        android:layout_width="0dp"

        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
...
                app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintRight_toRightOf="@id/right_guideline"
                app:layout_constraintTop_toTopOf="@id/bottom_guideline4" />

            <Button
                android:id="@+id/proofButtonSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correctness_button" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
